# flake8-gl-codeclimate

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
examples/: bad.py  bandit.py  logging-format.py  order.py  simplify.py  unused-module.py
flake8_gitlab_codeclimate/: formatter.py
flake8_gl_codeclimate/: __init__.py
scripts/: report-to-codeclimate.py  report-to-gl-codeclimate.py
tests/: test_formatter.py  test_integration.py
